fix screen width on small devices

--- a/src/index.css
+++ b/src/index.css
@@ -83,5 +83,6 @@ section {
   :root {
       --swiper-navigation-size: 20px;
       text-align: center;
+      width: 100vh;
   }
 }
