--- a/src/stylesheets/contact.css
+++ b/src/stylesheets/contact.css
@@ -106,7 +106,7 @@ textarea {
         flex-direction: column;
         gap: 1.2rem;
         justify-content: center;
-        /* align-items: center; */
+        align-items: center;
         opacity: 1;
     }
 
